installation and delivery date form and templates

--- a/woowoo/woowoo_webapp/installations/templates/installations/installation_detail.html
+++ b/woowoo/woowoo_webapp/installations/templates/installations/installation_detail.html
@@ -2,4 +2,6 @@
 <p>{{ object.address_one }}</p>
 <p>{{ object.address_two }}</p>
 <p>{{ object.postcode }}</p>
-<p>Created date : {{ object.created_date }}</p>
+<p>Date created: {{ object.created_date }}</p>
+<p>Installation Date: {{ object.installation_date }}</p>
+<p>Delivery Date: {{ object.delivery_date }}</p>
