--- a/woowoo/woowoo_webapp/emails/templates/installations/base.html
+++ b/woowoo/woowoo_webapp/emails/templates/installations/base.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -5,7 +6,7 @@
     <meta name="viewport" content="width=device-width"/>
 
     <!-- For development, pass document through inliner -->
-    <link rel="stylesheet" href="css/simple.css">
+    <link rel="stylesheet" href="{% static 'emails/style.css' %}">
 
     <style type="text/css">
 
