--- a/woowoo/woowoo_webapp/emails/templates/emails/provisional_date_notifier.html
+++ b/woowoo/woowoo_webapp/emails/templates/emails/provisional_date_notifier.html
@@ -19,7 +19,7 @@
     </tr>
 </table>
 
-<p>If there are any errors in this email please tkae a screen shot and email <a href="mailto:joel@joelcormack.com">Joel</a>.</p>
+<p>If there are any errors in this email please take a screen shot and email <a href="mailto:joel@joelcormack.com">Joel</a>.</p>
 
 <p><em>– Woo Woo Webapp</em></p>
 {% endblock %}
