refactored date form emails to html templates

--- a/woowoo/woowoo_webapp/emails/templates/emails/base.html
+++ b/woowoo/woowoo_webapp/emails/templates/emails/base.html
@@ -154,7 +154,7 @@
         <tr>
           <td class="content footer" align="center">
             <p>Sent by <a href="http://www.waterlesstoilets.co.uk">Woo Woo Waterless Toilets</a>,<br /> Hub Islington, 5 Torrens Street, London,  EC1V 1NQ</p>
-              <p><a href="mailto:info@waterlesstoilets.co.uk">info@waterlesstoilets.co.uk</a> | <a href="unsubscribe@waterlesstoilets.co.uk">Unsubscribe</a></p>
+              <p><a href="mailto:info@waterlesstoilets.co.uk">info@waterlesstoilets.co.uk</a></p>
           </td>
         </tr>
       </table>
