styled installation templates

--- a/woowoo/woowoo_webapp/installations/templates/installations/installation_dates.html
+++ b/woowoo/woowoo_webapp/installations/templates/installations/installation_dates.html
@@ -1,12 +1,10 @@
 {% extends 'installations/base.html' %}
-{% load static %}
 {% load bootstrap %}
 
 {% block script %}
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-<link rel="stylesheet" href="{% static 'installations/style.css' %}">
 <script>
   $(function() {
     $(".datepicker").datepicker({
@@ -21,7 +19,7 @@
 
 {% block content %}
 <form class="form-signin" action="{% url 'contractor-dates' installation_id %}" method="post">
-  <h2 class="form-signin-heading">Mulberry Road Allotments</h2>
+  <h2 class="form-signin--heading">Mulberry Road Allotments</h2>
   {% csrf_token %}
   {{ form|bootstrap }}
   <div class="form-group">
