--- a/woowoo/woowoo_webapp/installations/static/installations/style.css
+++ b/woowoo/woowoo_webapp/installations/static/installations/style.css
@@ -3,13 +3,16 @@ body {
   padding-bottom: 40px;
   background-color: #eee;
 }
-
+.box-central {
+  max-width: 330px;
+  margin: 0 auto;
+}
 .form-signin {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
 }
-.form-signin .form-signin-heading,
+.form-signin .form-signin--heading,
 .form-signin .checkbox {
   margin-bottom: 10px;
 }
