--- a/woowoo/woowoo_webapp/installations/templates/installations/installation_detail.html
+++ b/woowoo/woowoo_webapp/installations/templates/installations/installation_detail.html
@@ -1,7 +1,48 @@
-<h1>{{ object.name }}</h1>
-<p>{{ object.address_one }}</p>
-<p>{{ object.address_two }}</p>
-<p>{{ object.postcode }}</p>
-<p>Date created: {{ object.created_date }}</p>
-<p>Installation Date: {{ object.installation_date }}</p>
-<p>Delivery Date: {{ object.delivery_date }}</p>
+{% extends 'installations/base.html' %}
+{% block content %}
+<div class="box-central">
+
+  <p></p>
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      <h1 class="panel-title">{{ object.name }}</h1>
+    </div>
+    <div class="panel-body">
+      <address>
+        <strong>Site Address</strong><br>
+        {{ object.address_one }}<br>
+        {{ object.address_two }}<br>
+        {{ object.postcode }}<br>
+      </address>
+      <address>
+        <strong>Date created</strong><br>
+        {{ object.created_date }}<br>
+      </address>
+      <address>
+        <strong>Installation Date</strong><br>
+        {{ object.installation_date }}<br>
+      </address>
+      <address>
+        <strong>Delivery Date</strong><br>
+        {{ object.delivery_date }}<br>
+      </address>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-6">
+      <a href="{% url 'installation-list' %}">
+        <button type="button" class="btn btn-primary btn-block" aria-label="Left Align">
+          <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> <strong>Installations</strong>
+        </button>
+      </a>
+    </div>
+    <div class="col-xs-6">
+      <a href="{% url 'contractor-dates' object.id  %}">
+        <button type="button" class="btn btn-danger btn-block" aria-label="Left Align">
+          <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> <strong>Edit Dates</strong>
+        </button>
+      </a>
+    </div>
+  </div>
+</div>
+{% endblock %}
