dynamically genertaed site name on form

--- a/woowoo/woowoo_webapp/emails/templates/emails/installation_and_delivery_form_notifier.html
+++ b/woowoo/woowoo_webapp/emails/templates/emails/installation_and_delivery_form_notifier.html
@@ -3,14 +3,14 @@
 
 <h2>Hi {{ recipient }}</h2>
 
-<p> 
-  Thanks for confirming the installation week {{ date }}. 
-  Please contact the customer to arrange installation 
-  and confirm the dates of delivery and installation 
-  in the form linked below.
+<p>
+  Thanks for confirming the installation week {{ date }}
+  for {{ site_name }}. Please contact the customer to
+  arrange installation and confirm the dates of delivery
+  and installation in the form linked below.
 </p>
 
-<p>Customer: {{ customer_name }}, {{ number }} 
+<p>Customer: {{ customer_name }}, {{ number }}
   <a href="mailto:{{ email }}">{{ email }}</a>
 </p>
 
