--- a/woowoo/woowoo_webapp/emails/templates/emails/base.html
+++ b/woowoo/woowoo_webapp/emails/templates/emails/base.html
@@ -129,6 +129,9 @@
       text-decoration: none;
       font-weight: bold;
     }
+    .small-print {
+      font-size: 12px;
+    }
   </style>
 </head>
 <body>
@@ -141,8 +144,8 @@
                 {% block content %}
                 {% endblock %}
 
-                <p>If there are any errors in this email please take a screen shot and email <a href="mailto:joel@joelcormack.com">Joel</a>.</p>
                 <p><em>– Woo Woo Webapp</em></p>
+                <p class="small-print">If there are any errors in this email please take a screen shot and email <a href="mailto:info@waterlesstoilets.co.uk">us</a>.</p>
               </td>
           </tr>
       </table>
