added long and lat to installations

--- a/woowoo/woowoo_webapp/emails/templates/emails/base.html
+++ b/woowoo/woowoo_webapp/emails/templates/emails/base.html
@@ -144,7 +144,7 @@
                 {% block content %}
                 {% endblock %}
 
-                <p><em>– Woo Woo Webapp</em></p>
+                <p><em>– WooWoo</em></p>
                 <p class="small-print">If there are any errors in this email please take a screen shot and email <a href="mailto:info@waterlesstoilets.co.uk">us</a>.</p>
               </td>
           </tr>
