--- a/woowoo/woowoo_webapp/installations/templates/installations/installation_detail.html
+++ b/woowoo/woowoo_webapp/installations/templates/installations/installation_detail.html
@@ -8,24 +8,53 @@
       <h1 class="panel-title">{{ object.name }}</h1>
     </div>
     <div class="panel-body">
-      <address>
-        <strong>Site Address</strong><br>
-        {{ object.address_one }}<br>
-        {{ object.address_two }}<br>
-        {{ object.postcode }}<br>
-      </address>
-      <address>
-        <strong>Date created</strong><br>
-        {{ object.created_date }}<br>
-      </address>
-      <address>
-        <strong>Installation Date</strong><br>
-        {{ object.installation_date }}<br>
-      </address>
-      <address>
-        <strong>Delivery Date</strong><br>
-        {{ object.delivery_date }}<br>
-      </address>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="well">
+            <address>
+              <strong>Status</strong><br>
+              {{ status }}
+            </address>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-6">
+          <address>
+            <strong>Site Address</strong><br>
+            {{ object.address_one }}<br>
+            {{ object.address_two }}<br>
+            {{ object.postcode }}<br>
+          </address>
+          <address>
+            <strong>Pickup Date</strong><br>
+            {{ object.pickup_date }}<br>
+          </address>
+          <address>
+            <strong>Installation Date</strong><br>
+            {{ object.installation_date }}<br>
+          </address>
+        </div>
+        <div class="col-xs-6">
+          <address>
+            <strong>Contact</strong><br>
+            {{ contact }}<br>
+            {{ contact.phone }}<br>
+            {{ contact.email }}<br>
+          </address>
+          <address>
+            <strong>Delivery Date</strong><br>
+            {{ object.delivery_date }}<br>
+          </address>
+        </div>
+      </div>
+      <div class="embed-responsive embed-responsive-4by3">
+        <iframe class="embed-responsive-item"
+          frameborder="0" style="border:0"
+          src="{{ gmap_url }}" allowfullscreen>
+        </iframe>
+      </div>
     </div>
   </div>
   <div class="row">
