--- a/woowoo/woowoo_webapp/installations/templates/installations/home.html
+++ b/woowoo/woowoo_webapp/installations/templates/installations/home.html
@@ -1,6 +1,8 @@
 {% extends 'installations/base.html' %}
 {% block content %}
 <div class="box-central">
-  <a class="btn btn-primary" href="{% url 'installation-list' %}">All Installations &rarr;</a>
+  <h1>WooWoo Webapp</h1>
+  <p class="lead">Welcome to the webapp, below are links to view the up and coming installations.</p>
+  <a class="btn btn-lg btn-primary center-block" href="{% url 'installation-list' %}">Uncoming installations &rarr;</a>
 </div>
 {% endblock %}
