--- a/woowoo/woowoo_webapp/installations/templates/registration/login.html
+++ b/woowoo/woowoo_webapp/installations/templates/registration/login.html
@@ -11,28 +11,26 @@
     <p>Your account doesn't have access to this page. To proceed,
     please login with an account that has access.</p>
     {% else %}
-    <p>Please login to see this page.</p>
+    <p class="text-warning text-center">You must login to see this page.</p>
     {% endif %}
 {% endif %}
 
 <form class="form-signin" method="post" action="{% url 'login' %}">
   <h2 class="form-signin--heading">Login</h2>
   {% csrf_token %}
-  <table>
-    <tr>
-      <td>{{ form.username.label_tag }}</td>
-      <td>{{ form.username }}</td>
-    </tr>
-    <tr>
-      <td>{{ form.password.label_tag }}</td>
-      <td>{{ form.password }}</td>
-    </tr>
-  </table>
-<input class="btn btn-primary btn-block" type="submit" value="login" />
+    <div class="form-group">
+      <label>{{ form.username.label_tag }}</label>
+      <div class="form-django">{{ form.username }}</div>
+    </div>
+    <div class="form-group">
+      <label>{{ form.password.label_tag }}</label>
+      <div class="form-django">{{ form.password }}</div>
+    </div>
+<input class="btn btn-default btn-block" type="submit" value="Login" />
 <input type="hidden" name="next" value="{{ next }}" />
 
 {# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<a href="{% url 'password_reset' %}">Lost password?</a>
 
 
 </form>
