text change on home page

--- a/woowoo/woowoo_webapp/installations/templates/installations/home.html
+++ b/woowoo/woowoo_webapp/installations/templates/installations/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="box-central">
   <h1>WooWoo Webapp</h1>
-  <p class="lead">Welcome to the webapp, below are links to view the up and coming installations.</p>
+  <p class="lead">Welcome to the WooWoo WebApp, below is a link to current installations.</p>
   <a class="btn btn-lg btn-primary center-block" href="{% url 'installation-list' %}">Uncoming installations &rarr;</a>
 </div>
 {% endblock %}
