added info to provisional date email to contractor

--- a/woowoo/woowoo_webapp/emails/templates/emails/base.html
+++ b/woowoo/woowoo_webapp/emails/templates/emails/base.html
@@ -60,6 +60,13 @@
       border-width: 10px 20px 8px;
     }
 
+    .button--blue {
+      background-color: #336699;
+      border: solid #336699;
+      border-width: 10px 20px 8px;
+      width: auto;
+    }
+
     h1, h2, h3, h4, h5, h6 {
       margin-bottom: 20px;
       line-height: 1.25;
@@ -90,7 +97,9 @@
       font-weight: normal;
       margin-bottom: 20px;
     }
-
+    address {
+      font-size: 16px;
+    }
     .container {
       display: block !important;
       clear: both !important;
